Fixed bugs related to unauthorized access, included api for adding books